# FoxString

./: CMakeLists.txt  FoxString.c  FoxString.h  README.md  library.c  library.cpp  library.h  main.c  main.cpp
